duvet/src/pattern/snapshots/duvet__pattern__tests__content_without_meta.snap
---
source: src/pattern/tests.rs
expression: "parse(\"//=,//#\", r#\"\n    //# This is some content without meta\n    \"#)"
---
Ok(
    [],
)
