duvet/src/pattern/snapshots/duvet__pattern__tests__meta_without_content.snap
---
source: src/pattern/tests.rs
expression: "parse(\"//=,//#\", r#\"\n    //= type=todo\n    \"#)"
---
Err(
    "missing source information",
)
