duvet/src/pattern/snapshots/duvet__pattern__tests__type_todo.snap
---
source: src/pattern/tests.rs
expression: "parse(\"//=,//#\",\n    r#\"\n    //= https://example.com/spec.txt\n    //= type=todo\n    //= feature=cool-things\n    //= tracking-issue=123\n    //# Here is my citation\n    \"#)"
---
Ok(
    [
        Annotation {
            source: "file.rs",
            anno_line: 2,
            anno_column: 7,
            item_line: 7,
            item_column: 0,
            path: "",
            anno: Todo,
            target: "https://example.com/spec.txt",
            quote: "Here is my citation",
            comment: "",
            manifest_dir: "/",
            level: Auto,
            format: Auto,
            tracking_issue: "123",
            feature: "cool-things",
            tags: {},
        },
    ],
)
